--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,7 +2,7 @@
     "version":1,
     "builds": [
         { 
-            "src": "*.js", 
+            "src": "./index.js",
             "use": "@vercel/node" 
         }
     ],
