--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,14 +18,14 @@
     "react-google-charts": "^4.0.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.1.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "sass": "^1.68.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --openssl-legacy-provider",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
